<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Logo Game</string>
    <string name="action_settings">Settings</string>
    <string name="tittle">Logo Game</string>
    <string name="buttonStart">Start</string>
    <string name="buttonHelp">Help</string>
    <string name="title_activity_playground">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="hintTittle">Find the name of the logo</string>
    <string name="inputHint">Enter your answer</string>
    <string name="buttonHome">Home</string>
    <string name="buttonCheck">Check</string>
    <string name="title_activity_correct">CorrectActivity</string>
    <string name="title_activity_wrong">WrongActivity</string>
    <string name="gameover">Game Over</string>
    <string name="helpWindow">Help</string>
    <string name="Description">In this game, you will be shown a logo and asked to identify it. You are also requested to enter the correct answer in full words as shortforms are considered as wrong answers. Enjoy playing the game.</string>
    <string name="title_activity_question">QuestionActivity</string>
    <string name="title_activity_gameover">GameoverActivity</string>

</resources>