<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="446dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".PlaygroundActivity" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/hintTittle"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/inputAns"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/img1"
            android:layout_below="@+id/img1"
            android:layout_marginTop="22dp"
            android:ems="10"
            android:hint="@string/inputHint" >


        </EditText>

        <Button
            android:id="@+id/buttonHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/inputAns"
            android:layout_alignParentBottom="true"
            android:text="@string/buttonHome" />

        <Button
            android:id="@+id/buttonCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/inputAns"
            android:onClick="button"
            android:text="@string/buttonCheck" />

        <ImageView
            android:id="@+id/img1"
            android:layout_width="fill_parent"
            android:layout_height="300dp"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/textView1"
            android:src="@drawable/ic_launcher" />

        <ImageView
            android:id="@+id/img2"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignBottom="@+id/img1"
            android:layout_alignLeft="@+id/textView1"
            android:layout_marginBottom="36dp"
            android:src="@drawable/ic_launcher"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/buttonHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/inputAns"
            android:layout_centerHorizontal="true"
            android:src="@drawable/hint1" />

    </RelativeLayout>

</ScrollView>